k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysoulmate
  labels:
    name: mysoulmate
    environment: production
